<resources>
    <string name="app_name">"Movie Fan"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nadaesloqueparece">Nada es lo que parece</string>
    <string name="descripcionNadaEsloQueParece">Nada es lo que parece reúne a un equipo del FBI que intenta capturar a los Cuatro Jinetes, un grupo formado por los mejores magos del mundo. Éstos se dedican a robar bancos mientras realizan sus habituales espectáculos, repartiendo luego el dinero que obtienen entre el público.</string>
    <string name="descripcionElSeñorDeLosAnillos2">Tras la disolución de la Compañía del Anillo, Frodo y su fiel amigo Sam se dirigen hacia Mordor para destruir el Anillo Único y acabar con el poder de Sauron, pero les sigue un siniestro personaje llamado Gollum. Mientras, y tras la dura batalla contra los orcos donde cayó Boromir, el hombre Aragorn, el elfo Legolas y el enano Gimli intentan rescatar a los medianos Merry y Pipin, secuestrados por los orcos de Mordor. Por su parte, Saurón y el traidor Sarumán continúan con sus planes en Mordor, a la espera de la guerra contra las razas libres de la Tierra Media. </string>
    <string name="descripcionNadaEsLoqueParece2">Un año después de los acontecimientos de la primera película, los cuatro jinetes se embarcan en un nuevo acto de ilusión y nuevos trucos, sin embargo, un personaje nuevo los desafiará a un nuevo truco para su propio beneficio.​ Los jinetes llevan escondidos un año, cuando finalmente "el ojo" les da la oportunidad de aparecer una vez más, pero su show no sale como lo planearon y son engañados y algunos de sus secretos más importantes son revelados ante miles de personas, en su escape los jinetes son secuestrados por un joven manipulador que los convence de robar un dispositivo capaz de acceder a todas las computadoras y dispositivos del mundo, pero son engañados una vez más, así que empiezan un nuevo acto para demostrar su inocencia ante el mundo y exponer a los verdaderos culpables.</string>
    <string name="descripcionStarWars">Treinta años después de la victoria de la Alianza Rebnotelde sobre la segunda Estrella de la Muerte (hechos narrados en el Episodio VI: El retorno del Jedi), la galaxia está todavía en guerra. </string>
    <string name="descripcionIronMan3">El descarado y brillante empresario Tony Stark (Iron Man) se enfrentará a un enemigo cuyo poder no conoce límites. Cuando Stark comprende que su enemigo ha destruido su universo personal, se embarca en una angustiosa búsqueda para encontrar a los responsables. Este viaje pondrá a prueba su entereza una y otra vez. </string>
    <string name="descripcionJohnq">Su hijo sufre una enfermedad terminal, y su compleja situación económica le impedirá encontrar la ayuda debida, pero él hará lo que sea por salvarlo.</string>
    <string name="descripcionJurassicWorld">Veintidós años después de los acontecimientos de Parque Jurásico (1993), Isla Nubla tiene ahora un parque temático de dinosaurios en pleno funcionamiento llamado Jurassic World, como lo había previsto John Hammond. Después de 10 años de funcionamiento, las tasas de visitantes están en declive, y con el fin de cumplir con el mandato corporativo, crean una nueva atracción para rescatar el interés de los visitantes, lo que da como resultado algo horrible.</string>
    <string name="descripcionThor">Su objetivo es volver a Asgard y parar el Ragnarök (la batalla del fin del mundo), antes de que esto signifique la destrucción de su planeta natal y el fin de la civilización asgardiana a manos de una todopoderosa y nueva amenaza, la diosa asgardiana de la muerte, Hela.</string>
    <string name="descripcionElOrigen">Dom Cobb (Leonardo DiCaprio) es un hábil ladrón, absolutamente el mejor en el peligroso arte de la extracción: robar valiosos secretos del interior del subconsciente cuando en el momento del sueño, cuando la mente es más vulnerable.</string>
    <string name="descripcionMisionImposible">Los miembros de un comando de la CIA son enviados a Praga con la misión de capturar, durante una recepción en la embajada americana, a un espía enemigo que se dispone a robar un disco que contiene una lista secreta de agentes de Europa central. Lo único que ignoran es que la CIA, convencida de que en el comando hay un topo infiltrado, ha enviado un segundo equipo con la misión de corroborar que todo ocurre según lo previsto y detener cuanto antes al detective que está tratando de hundir su organización.</string>
    <string name="descripcionDuroDeMatar">En lo alto de la ciudad de Los Ángeles, un grupo terrorista se ha apoderado de un edificio tomando a un grupo de personas como rehenes. Sólo un hombre, el policía de Nueva York John McClane (Bruce Willis), ha conseguido escapar del acoso terrorista. Aunque está solo y fuera de servicio, McClane se enfrentará a los secuestradores. Él es la única esperanza para los rehenes.</string>
    <string name="descripcionElTransportador">El ex operador de Fuerzas Especiales Frank Martin vive lo que parece ser una vida tranquila a orillas del Mediterráneo francés, donde presta sus servicios como un “transportador”, un mercenario que traslada bienes —humanos o de cualquier tipo— de un lugar a otro. Siempre sin preguntas de por medio. Frank, que en su Mercedes equipado lleva a cabo misiones secretas y a veces peligrosas, se apega a un estricto juego de tres reglas que nunca rompe. Regla número uno: Nunca modifiques el trato. Dos: Omitir nombres, Frank no quiere saber para quién trabaja o qué es lo que transporta. Tres: Nunca ver qué hay dentro del paquete.</string>
    <string name="descripcionRapidoYFurioso">Una misteriosa banda de delincuentes se dedica a robar camiones en marcha desde vehículos deportivos. La policía decide infiltrar un hombre en el mundo de las carreras ilegales para descubrir posibles sospechosos. El joven y apuesto Brian entra en el mundo del tunning donde conoce a Dominic, rey indiscutible de este mundo y sospechoso número uno, pero todo se complicará cuando se enamore de su hermana.</string>
    <string name="descripcionNachoLibre">Nacho es un hombre sin talento. Se crió en un monasterio en México del que ahora es el cocinero, pero no parece encajar. Nacho quiere a los huérfanos para los que cocina, pero todo lo que hace sabe fatal. Según él, porque tiene una pésima materia prima. Se da cuenta de que debe ingeniárselas para cocinar algo mejor para los pobres huérfanos (y de paso, impresionar a la preciosa hermana Encarnación). Se le ocurre la idea de ganar dinero convirtiéndose en luchador de lucha libre, pero las monjas del monasterio están totalmente en contra de la lucha libre y a Nacho no le queda más remedio que llevar una doble vida</string>
    <string name="descripcionMasBaratoDocena">Remake de un film del mismo título de 1950, que relata las peripecias de los Baker, un matrimonio con doce hijos. Cuando el padre consigue hacer realidad el sueño de su vida, entrenar a un equipo de fútbol americano, la familia tiene que trasladarse desde un pequeño pueblo de Illinois a una gran ciudad.</string>
    <string name="descripcionLaFamiliaDeMiNovia">Greg Focker (Ben Stiller) es un enfermero algo patoso que, tras anunciar su compromiso con su novia Pam (Teri Polo), tiene que pasar unos días con los padres de ella, para conocerles. Su encuentro inicial no será muy afortunado, en especial por las suspicacias que Greg levanta en el estricto padre de la novia (Robert de Niro), un padre protector que ha trabajado para la CIA, aunque ahora está ya retirado, y al que es muy difícil impresionar. Desde el principio, Jim rechaza por completo a Greg, pero a medida que lo conoce mejor, su rechazo se convierte en absoluto desprecio, y se encarga de convertirse en la peor pesadilla de este hombre que, a pesar de amar a su novia y querer dar una buena primera impresión, cada vez se hunde más en el lodo de su propia ineptitud, y deberá luchar mucho para poder cambiar la pésima opinión que tienen de él los padres de su novia. </string>
    <string name="descripcionAlexander">Un día como todos los demás, Alexander se levanta y nota que tiene algo pegajoso en el pelo, anoche se acostó con un chicle en la boca y ahora lo tiene extendido por la cabeza. Cuando el pequeño se levanta de la cama tropieza con el patín y se hace un moretón, después se le cae el jersey mientras el agua salía del grifo. En este momento, Alexander se da cuenta de que no va a ser un buen día, sino terrible, horrible, espantoso y horroroso. Pero su día no ha hecho nada más que empezar y todavía puede cambiar para peor o para mejor.La película es una adaptación del libro infantil "Alexander and the Terrible, Horrible, no Good, Very Bad Day" de la escritora Judith Viorst en el año 1972.</string>
    <string name="descripcionLasVacacionesMrBean">Mister Bean decide irse de vacaciones al sur de Francia y convierte su viaje de Londres a la Costa Azul en un auténtico caos: por dondequiera que pasa provoca verdaderos estragos.</string>
    <string name="descripcionRushHour">Dos detectives diferentes son asignados en un mismo caso. Ambos tendrán que adaptarse a las costumbres del otro para poder concluir su trabajo con éxito, pero no va a ser una tarea fácil. El detective inspector Lee (Jackie Chan) es el rey de las artes marciales y pertenece a la Royal Hong Kong Police. Su pupila preferida es la hija de once años del Cónsul chino, de la cual el inspector Lee es su guardaespaldas y su mejor amigo. Esta muchacha es capturada y llevada a los Estados Unidos por un peligroso grupo criminal. Hasta allí tendrá que viajar el inspector y, donde se unirá a la investigación con un departamento del FBI y, concretamente, al detective James Carter (Tucker), un arrogante e impulsivo agente de policía. La explosiva pareja tendrá que enfrentarse a una banda de criminales muy peligrosa, y contarán con la ayuda de Tania Johnson (Elizabeth Peña), una experta en artefactos explosivos.</string>
    <string name="categoriaCienciaFiccion">Ciencia Ficción</string>
    <string name="categoriaAccion">Acción</string>
    <string name="categoriaComedia">Comedia</string>
    <string name="categoriaDrama">Drama</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="director">Director</string>
    <string name="camilo_romero">Camilo Romero</string>
    <string name="noticias">Noticias</string>
    <string name="familia">Familia</string>
    <string name="documentales">Documentales</string>
    <string name="crimen">Crimen</string>
    <string name="animacion">Animacion</string>
    <string name="aventuras">Aventuras</string>
    <string name="fantasia">Fantasia</string>
    <string name="historia">Historia</string>
    <string name="horror">Horror</string>
    <string name="misterio">Misterio</string>
    <string name="fecha_de_nacimiento_dos_puntos">Fecha de nacimiento:</string>
    <string name="musica">Musica</string>
    <string name="favoritos">Favoritos</string>
    <string name="accionyaventura">Accion y Aventura</string>
    <string name="documental">Documental</string>
    <string name="chicos">Chicos</string>
    <string name="realitys">Realitys</string>
    <string name="sci_fi_y_fantasia">Sci-Fi y Fantasia</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
    <string name="guerra_y_politica">Guerra y Politica</string>
    <string name="western">Western</string>
    <string name="lugar_de_nacimiento">Lugar de nacimiento:</string>
    <string name="noticias_relacionadas_solo">Noticias relacionadas</string>
    <string name="entrar">Entrar</string>
    <string name="o">O</string>
    <string name="crear">Crear</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
</resources>