<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grisBackground"
    android:orientation="vertical"
    tools:context=".View.Fragments.DescripcionesDeActoresFragment">


    <ImageView
        android:id="@+id/imageViewPosterDelActor"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:src="@drawable/image_loading2"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textViewNombreDelActor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/negroAlphaLight"
        android:text="@string/camilo_romero"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/imageViewPosterDelActor"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_below="@+id/textViewNombreDelActor"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lugar_de_nacimiento"
            android:textColor="@color/primary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNacionalidadActor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="@color/blanco"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento_dos_puntos"
            android:textColor="@color/primary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewFechaNacimientoActor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor ="@color/blanco"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noticias_relacionadas_solo"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/line_green_anchor_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/line_green_light" />

    </LinearLayout>


</RelativeLayout>